# service_app

./: CMakeLists.txt  README.md  service_app.vix  vix.json
examples/: basic_service.cpp  health_checks.cpp  service_metrics.cpp
include/service_app/: service_app.hpp
tests/: test_basic.cpp
